# swa

./: .gitignore  example-buffer.c  example-exchange.c  example-gl.c  example-vulkan-loop.c  example-vulkan.c  example-wakeup.c  example.c  meson.build  meson_options.txt
.github/workflows/: ci.yml
apk/: AndroidManifest.xml.in  build.sh  meson.build  setup.sh
docs/: android.cross  android.md  drm.md  events.md  notes.md  threads.md
docs/concepts/: backend.h  egl.h  posix.h
docs/examples/: example-buffer.c  example-child.c  example-exchange.c  example-gl.c  example-input.c  example-vulkan-loop.c  example-vulkan.c  example-wakeup.c  example.c  meson.build
include/swa/: android.h  config.h.in  egl.h  image.h  impl.h  key.h  meson.build  posix.h  swa.h  wayland.h  winapi.h  x11.h  xkb.h
include/swa/private/: android.h  egl.h  impl.h  wayland.h  winapi.h  x11.h  xkb.h
include/swa/private/kms/: kms.h  vulkan.h  xcursor.h
src/: wgl.c
src/swa/: android.c  android.h  egl.c  egl.h  swa.c  wayland.c  wayland.h  wgl.c  winapi.c  x11.c  x11.h  xcursor.c  xkb.c
src/swa/drm/: LICENSE  drm.c  drm.h  props.c  props.h  vulkan.c  vulkan.h
src/swa/kms/: LICENSE  kms.c  kms.h  props.c  props.h  vulkan.c  xcursor.c
subprojects/: dlg.wrap  ml.wrap  pml.wrap
